# emanjson2imodxf

./: LICENSE  README.md  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md  test_and_deploy.yml
emanjson2imodxf/: __init__.py  data_munging.py  emanjson2imodxf.py
tests/: example.json  example.tlt  example.xf  test_emanjson2imodxf.py
